# secretive-x

./: .gitignore  AGENTS.md  CHANGELOG.md  CLONE_FEATURES.md  INCIDENTS.md  Makefile  PLAN.md  PRODUCT_ROADMAP.md  PROJECT_MEMORY.md  README.md  UPDATE.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  PROJECT.md  RELEASE.md  ROADMAP.md  SECURITY.md
scripts/: smoke_cli.py
src/secretive_x/: cli.py  config.py  core.py  ssh.py  store.py  utils.py
tests/: test_cli.py  test_config.py  test_core.py  test_ssh.py  test_store.py  test_utils.py
